--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,10 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+
+### Code ###
+**/.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
